fix dark mode modal sentence black on black
Changelog: fixed

--- a/webapp/channels/src/sass/components/_inputs.scss
+++ b/webapp/channels/src/sass/components/_inputs.scss
@@ -3,7 +3,6 @@
 .help-text {
     display: block;
     margin: 10px 0 0;
-    color: $dark-gray;
 
     ul,
     ol {
